--- a/index.html
+++ b/index.html
@@ -3,10 +3,72 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Sunrise Cafe</title>
     <link rel="stylesheet" href="./styles/index.css" />
   </head>
   <body>
-    <h1>hey!</h1>
+    <header>
+      <section class="hero-section">
+        <h1>SUNRISE CAFE</h1>
+        <h2>Fresh Brews & Cozy Vibe</h2>
+        <button>view menu</button>
+      </section>
+    </header>
+    <main>
+      <section class="about-section">
+        <article>
+          Welcome to Sunrise Café, your cozy corner for freshly brewed coffee,
+          homemade pastries, and heartwarming meals. Nestled in the heart of the
+          city, we take pride in serving locally sourced ingredients and
+          artisan-crafted drinks that bring people together. Whether you are
+          looking for a morning pick-me-up, a quiet place to work, or a friendly
+          spot to catch up with friends, we have got you covered. Every cup is
+          brewed with love, and every dish is made with care. Come in, take a
+          seat, and enjoy the simple joys of great food and good company.
+        </article>
+        <img src="" alt="" />
+      </section>
+      <section class="bestsellers-section">
+        <div>
+          Caramel Latte – Rich espresso blended with velvety caramel syrup and
+          frothy milk, topped with a drizzle of caramel.($4.99)
+        </div>
+        <div>
+          Avocado Toast – Crispy sourdough bread topped with creamy avocado,
+          cherry tomatoes, and a sprinkle of feta cheese. ($7.99)
+        </div>
+        <div>
+          Blueberry Pancakes – Fluffy pancakes stacked high, served with fresh
+          blueberries and a drizzle of maple syrup. ($8.49)
+        </div>
+        <div>
+          Chocolate Croissant – A flaky, buttery pastry filled with rich melted
+          chocolate, perfect with your morning coffee. ($3.99)
+        </div>
+      </section>
+      <section class="testimonials-section">
+        <div>
+          Emma R.: "Sunrise Café is my go-to spot for a cozy breakfast. Their
+          caramel latte is the best in town, and the atmosphere is just
+          perfect!"
+        </div>
+        <div>
+          Daniel M.: "I love working from here! Great coffee, friendly staff,
+          and the avocado toast is amazing. Highly recommend!"
+        </div>
+        <div>
+          Sophia L.: "The warm and inviting ambiance makes this café stand out.
+          The blueberry pancakes are heavenly! Can’t wait to come back."
+        </div>
+      </section>
+    </main>
+    <footer>
+      <section class="social-media">
+        <a href="#">Facebook</a>
+        <a href="#">Instagram</a>
+        <a href="#">Twitter</a>
+      </section>
+      <p>Copyright © 2025 Sunrise Café</p>
+    </footer>
   </body>
 </html>
