adding fonts and hero page layout

--- a/index.html
+++ b/index.html
@@ -3,18 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="platiins" />
+    <meta name="description" content="Sunrise Cafe" />
+    <meta
+      name="keywords"
+      content="cafe, coffee, breakfast, pastries, food, drinks"
+    />
     <title>Sunrise Cafe</title>
+    <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/index.css" />
   </head>
   <body>
-    <header>
+    <header id="header" class="header">
       <section class="hero-section">
         <h1>SUNRISE CAFE</h1>
         <h2>Fresh Brews & Cozy Vibe</h2>
         <button>view menu</button>
       </section>
     </header>
-    <main>
+    <main id="main">
       <section class="about-section">
         <article>
           Welcome to Sunrise Café, your cozy corner for freshly brewed coffee,
@@ -62,7 +69,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer id="footer">
       <section class="social-media">
         <a href="#">Facebook</a>
         <a href="#">Instagram</a>
